# demo-midlibrary-explorer-nextjs

./: .env.example  .eslintrc.json  .gitignore  README.md  helpers.js  jsconfig.json  next.config.mjs  package-lock.json  package.json
.github/: dependabot.yml
app/: globals.css  layout.js  page.js
app/api/diverse/: route.js
app/api/explore/: route.js
app/api/items/[item_id]/: route.js
app/api/sample/: route.js
app/api/search/: route.js
app/api/search-text/: route.js
app/search/[id]/: page.js
components/: Header.jsx  ImageCard.jsx  InfoDialog.jsx  Logo.jsx  Results.jsx  VercelLogo.jsx
components/ChoiceScreen/: ChoiceScreen.jsx  PairChoice.jsx
components/ContextScreen/: Context.jsx  ContextScreen.jsx
components/ExploreScreen/: ExploreScreen.jsx
context/: data-context.jsx
encoder/: README.md  pyproject.toml
encoder/explorer/: encode.py  encoder.py  extractor.py  settings.py  upload.py
theme/: dark-theme.js  index.js  palette.js
